<resources>
    <string name="app_name">CensoAlumbradoPublico</string>
    <string name="title_home">Censos</string>
    <string name="title_dashboard">Censo</string>
    <string name="title_notifications">Poste</string>
    <string name="cve_mun">CVE MUN</string>
    <string name="municipio">Municipio</string>
    <string name="divisi_n">División</string>
    <string name="zona">Zona</string>
    <string name="agencia">Agencia</string>
    <string name="estado">Estado</string>
    <string name="calle_margen">Calle margen</string>
    <string name="tensi_n">Tensión</string>
    <string name="calle">Calle</string>
    <string name="HORIZONTAL">Horizonal</string>
    <string name="vertical">Vertical</string>
    <string name="glorieta">Glorieta</string>
    <string name="carretera">Carretera</string>
    <string name="derecha">Derecha</string>
    <string name="izquierda">Izquierda</string>
    <string name="centro">Centro</string>
    <string name="manzana">Manzana</string>
    <string name="baja">Baja</string>
    <string name="media">Media</string>
    <string name="entre_calle_1">Entre Calle 1</string>
    <string name="entre_calle_2">Entre Calle 2</string>
    <string name="poblacion_o_colonia">Poblacion o colonia</string>
    <string name="localidad">Localidad</string>
    <string name="actualizar_estados">Actualizar estados</string>
    <string name="actualizar">Actualizar</string>
    <string name="nuevo">Nuevo</string>
    <string name="guardar">Guardar</string>
    <string name="id_poste">ID Poste</string>
    <string name="cantidad">Cantidad</string>
    <string name="cantidad_hint"><font size="35">Cantidad</font></string>
    <string name="watts_hint"><font size="35">Watts</font></string>
    <string name="carga_hint"><font size="35">Carga</font></string>
    <string name="equipo_aux">Equipo Aux</string>
    <string name="actualizar_ubicaci_n">Actualizar ubicación</string>
    <string name="gps">GPS</string>
    <string name="postes">Postes</string>
    <string name="upload">Upload</string>
    <string-array name="calleMargen">
        <item>Derecha</item>
        <item>Izquierda</item>
        <item>Centro</item>
    </string-array>
</resources>