<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/gps"
        android:title="@string/gps"
        android:tooltipText="@string/actualizar_ubicaci_n"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_actualizar"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/actualizar"
        android:tooltipText="Actualizar"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_nuevo"
        android:icon="@drawable/add"
        android:title="@string/nuevo"
        android:tooltipText="Nuevo"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_Guardar"
        android:icon="@drawable/save"
        android:title="@string/guardar"
        android:tooltipText="Guardar"
        app:showAsAction="always"/>
</menu>