<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment"
    android:layout_margin="0dp"
    android:padding="0dp">


    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.48"
        android:text="@string/estado"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"/>
    <TextView
        android:id="@+id/tvMunicipio"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/municipio"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvEstado"
        />

    <Spinner
        android:id="@+id/spEstados"
        android:nextFocusDown="@id/spMunicpios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEstado"
        app:layout_constraintWidth_percent="0.5" />

    <Spinner
        android:id="@+id/spMunicpios"
        android:nextFocusDown="@id/tilDivision"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintStart_toEndOf="@id/spEstados"
        app:layout_constraintTop_toBottomOf="@id/tvMunicipio"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDivision"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spEstados"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDivision"
            android:nextFocusDown="@id/txtZona"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/divisi_n"
            android:maxLength="20"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilZona"
        android:nextFocusForward="@id/tilAgencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintStart_toEndOf="@id/tilDivision"
        app:layout_constraintTop_toBottomOf="@id/spEstados"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtZona"
            android:nextFocusDown="@id/txtAgencia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zona"
            android:maxLength="20"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAgencia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toEndOf="@id/tilZona"
        app:layout_constraintTop_toBottomOf="@id/spEstados"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAgencia"
            android:nextFocusDown="@id/txtCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/agencia"
            android:maxLength="20"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCalle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilDivision"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCalle"
            android:nextFocusDown="@id/rgCalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calle"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/rgCalle"
        android:nextFocusDown="@id/txtCalleMargen"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilCalle"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="4dp">

        <RadioButton
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/rbCalleHorizonal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/HORIZONTAL"
            android:tag="1"
            android:paddingEnd="2dp"
            />

        <RadioButton
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/rbCalleVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vertical"
            android:tag="2"
            android:paddingEnd="2dp"
            />

        <RadioButton
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/rbCalleCarretera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carretera"
            android:paddingEnd="2dp"
            android:tag="3"
            />

        <RadioButton
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/rbCalleGlorieta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/glorieta"
            android:paddingEnd="2dp"
            android:tag="4"
            />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCalleMargen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgCalle"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtCalleMargen"
            android:nextFocusDown="@id/chkCalleMargenDerecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/calle_margen"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/chkCalleMargenDerecha"
        android:nextFocusDown="@id/chkCalleMargenIzquierda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/derecha"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilCalleMargen"
        android:layout_marginStart="4dp"
        android:paddingEnd="4dp"
         />
    <CheckBox
        android:id="@+id/chkCalleMargenIzquierda"
        android:nextFocusDown="@id/chkCalleMargenCentro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/izquierda"
        app:layout_constraintStart_toEndOf="@id/chkCalleMargenDerecha"
        app:layout_constraintTop_toBottomOf="@id/tilCalleMargen"
        android:paddingEnd="4dp"

        />

    <CheckBox
        android:id="@+id/chkCalleMargenCentro"
        android:nextFocusDown="@id/txtManzana"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/centro"
        app:layout_constraintStart_toEndOf="@id/chkCalleMargenIzquierda"
        app:layout_constraintTop_toBottomOf="@id/tilCalleMargen"
        android:paddingEnd="4dp"

        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilManzana"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chkCalleMargenDerecha"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtManzana"
            android:nextFocusDown="@id/rgTension"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/manzana"
            android:maxLength="40"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvTension"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tensi_n"
        app:layout_constraintTop_toBottomOf="@id/chkCalleMargenCentro"
        app:layout_constraintStart_toEndOf="@+id/tilManzana"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"/>

    <RadioGroup
    android:id="@+id/rgTension"
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/tvTension"
    app:layout_constraintStart_toEndOf="@id/tilManzana"
        android:layout_marginStart="4dp"
        android:layout_marginTop="0dp"
    android:padding="0dp">

    <RadioButton

        android:id="@+id/chkCalleHorizontal"
        android:nextFocusDown="@id/txtEntreCalle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baja"
        android:paddingEnd="4dp"
        android:paddingTop="8dp"
        android:tag="1"
        />

    <RadioButton
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/chkCalleVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/media"
        android:paddingEnd="4dp"
        android:paddingTop="8dp"
        android:tag="2"
        />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEntreCalle1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilManzana"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEntreCalle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entre_calle_1"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEntreCalle2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEntreCalle1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEntreCalle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entre_calle_2"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPoblacionColonia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilEntreCalle2"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtPoblacionColonia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/poblacion_o_colonia"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilLocalidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tilPoblacionColonia"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtLocalidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/localidad"
            android:maxLength="50"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>




</androidx.constraintlayout.widget.ConstraintLayout>